Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,58 @@
       ],
       "text/vnd.plotly.v1+html": [
        "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "6fb6ec76-4064-11e9-8d9e-d17fe4dc2ef8",
+         "x": [
+          70,
+          80,
+          90,
+          100,
+          110,
+          120,
+          130,
+          140
+         ],
+         "y": [
+          10852,
+          9690,
+          9128,
+          9166,
+          9804,
+          11042,
+          12880,
+          15318
+         ]
+        }
+       ],
+       "layout": {
+        "title": "RSS with changes to y-intercept",
+        "xaxis": {
+         "title": "y-intercept value"
+        },
+        "yaxis": {
+         "title": "RSS"
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"c176ee70-0bab-4901-8387-1ac62cdf789c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c176ee70-0bab-4901-8387-1ac62cdf789c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"type\": \"scatter\", \"uid\": \"6fdddb74-4064-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"c176ee70-0bab-4901-8387-1ac62cdf789c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c176ee70-0bab-4901-8387-1ac62cdf789c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"type\": \"scatter\", \"uid\": \"6fdddb74-4064-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -212,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +288,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "8fccad86-3d51-11e9-b261-3533f9a07681",
+         "uid": "167e263c-4065-11e9-8d9e-d17fe4dc2ef8",
          "x": [
           70,
           80,
@@ -260,10 +312,10 @@
        }
       },
       "text/html": [
-       "<div id=\"84f545ad-0be1-4c71-b18e-e6902e25158b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"84f545ad-0be1-4c71-b18e-e6902e25158b\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"8fd0d334-3d51-11e9-b261-3533f9a07681\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ec1d47bf-703c-41b4-a67c-0775a882032c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ec1d47bf-703c-41b4-a67c-0775a882032c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"16833ab4-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"84f545ad-0be1-4c71-b18e-e6902e25158b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"84f545ad-0be1-4c71-b18e-e6902e25158b\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"8fd0d334-3d51-11e9-b261-3533f9a07681\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ec1d47bf-703c-41b4-a67c-0775a882032c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ec1d47bf-703c-41b4-a67c-0775a882032c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"16833ab4-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
