--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,12 +288,11 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "1c282e16-4065-11e9-8d9e-d17fe4dc2ef8",
+         "uid": "2062c5ea-4065-11e9-8d9e-d17fe4dc2ef8",
          "x": [
           70,
           80,
-          90,
-          100
+          90
          ],
          "y": [
           10852,
@@ -313,10 +312,10 @@
        }
       },
       "text/html": [
-       "<div id=\"ed8a0ef6-2c78-437e-9ad6-b5737142c9a9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ed8a0ef6-2c78-437e-9ad6-b5737142c9a9\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"1c37da8c-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0eccbeba-92ce-4b70-824f-b645d425b617\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0eccbeba-92ce-4b70-824f-b645d425b617\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"20668748-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"ed8a0ef6-2c78-437e-9ad6-b5737142c9a9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ed8a0ef6-2c78-437e-9ad6-b5737142c9a9\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"1c37da8c-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0eccbeba-92ce-4b70-824f-b645d425b617\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0eccbeba-92ce-4b70-824f-b645d425b617\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"20668748-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -329,7 +328,7 @@
     "from graph import m_b_trace, trace_values, plot, build_layout\n",
     "init_notebook_mode(connected=True)\n",
     "layout = build_layout(options = {'title': 'RSS with changes to y-intercept', 'xaxis': {'title': 'y-intercept value'}, 'yaxis': {'title': 'RSS'}})\n",
-    "b_values = list(range(70, 150, 10)[:4])\n",
+    "b_values = list(range(70, 150, 10)[:3])\n",
     "rss = [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318][:3]\n",
     "cost_curve_trace = trace_values(b_values, rss, mode=\"lines\")\n",
     "plot([cost_curve_trace], layout)"
