Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,11 +288,13 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "282a3376-4065-11e9-8d9e-d17fe4dc2ef8",
+         "uid": "2faceee0-4065-11e9-8d9e-d17fe4dc2ef8",
          "x": [
           70,
           80,
-          90
+          90,
+          100,
+          110
          ],
          "y": [
           10852,
@@ -312,10 +314,10 @@
        }
       },
       "text/html": [
-       "<div id=\"1667b65e-75fb-415d-8278-7bdb5e34ba44\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1667b65e-75fb-415d-8278-7bdb5e34ba44\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"2834703e-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"37816ce4-c06b-434e-bf18-839c3e723d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"37816ce4-c06b-434e-bf18-839c3e723d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"2fb77b76-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"1667b65e-75fb-415d-8278-7bdb5e34ba44\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1667b65e-75fb-415d-8278-7bdb5e34ba44\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"2834703e-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"37816ce4-c06b-434e-bf18-839c3e723d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"37816ce4-c06b-434e-bf18-839c3e723d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"2fb77b76-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -324,10 +326,10 @@
     {
      "data": {
       "text/plain": [
-       "[70, 80, 90]"
+       "[70, 80, 90, 100, 110]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +340,7 @@
     "from graph import m_b_trace, trace_values, plot, build_layout\n",
     "init_notebook_mode(connected=True)\n",
     "layout = build_layout(options = {'title': 'RSS with changes to y-intercept', 'xaxis': {'title': 'y-intercept value'}, 'yaxis': {'title': 'RSS'}})\n",
-    "b_values = list(range(70, 150, 10)[:3])\n",
+    "b_values = list(range(70, 150, 10)[:5])\n",
     "rss = [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318][:3]\n",
     "cost_curve_trace = trace_values(b_values, rss, mode=\"lines\")\n",
     "plot([cost_curve_trace], layout)\n",
