--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,13 +288,11 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "2faceee0-4065-11e9-8d9e-d17fe4dc2ef8",
+         "uid": "3745f2f0-4065-11e9-8d9e-d17fe4dc2ef8",
          "x": [
           70,
           80,
-          90,
-          100,
-          110
+          90
          ],
          "y": [
           10852,
@@ -314,10 +312,10 @@
        }
       },
       "text/html": [
-       "<div id=\"37816ce4-c06b-434e-bf18-839c3e723d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"37816ce4-c06b-434e-bf18-839c3e723d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"2fb77b76-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b100715f-a8e6-4f5f-bd31-30466371d6cf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b100715f-a8e6-4f5f-bd31-30466371d6cf\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"374a115a-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"37816ce4-c06b-434e-bf18-839c3e723d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"37816ce4-c06b-434e-bf18-839c3e723d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"2fb77b76-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b100715f-a8e6-4f5f-bd31-30466371d6cf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b100715f-a8e6-4f5f-bd31-30466371d6cf\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"374a115a-4065-11e9-8d9e-d17fe4dc2ef8\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -326,10 +324,10 @@
     {
      "data": {
       "text/plain": [
-       "[70, 80, 90, 100, 110]"
+       "[70, 80, 90]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +338,7 @@
     "from graph import m_b_trace, trace_values, plot, build_layout\n",
     "init_notebook_mode(connected=True)\n",
     "layout = build_layout(options = {'title': 'RSS with changes to y-intercept', 'xaxis': {'title': 'y-intercept value'}, 'yaxis': {'title': 'RSS'}})\n",
-    "b_values = list(range(70, 150, 10)[:5])\n",
+    "b_values = list(range(70, 150, 10)[:3])\n",
     "rss = [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318][:3]\n",
     "cost_curve_trace = trace_values(b_values, rss, mode=\"lines\")\n",
     "plot([cost_curve_trace], layout)\n",
